--- a/style.css
+++ b/style.css
@@ -176,38 +176,21 @@ header.sticky{
 	padding: 12px 15%;
 }
 
-.about{
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	align-items: center;
-	gap: 3rem;
-}
-.about-img img{
-	max-width: 530px;
-	height: auto;
-	width: 100%;
-	border-radius: 8px;
-}
-.about-text h2{
-	font-size: var(--h2-font);
-	line-height: 1;
-}
-.about-text h4{
-	font-size: 24px;
-	font-weight: 600;
-	color: var(--text-color);
-	line-height: 1.7;
-	margin: 15px 0 30px;
-}
-.about-text p{
-	color: var(--second-color);
-	font-size: var(--p-font);
-	line-height: 1.5;
-	margin-bottom: 1.5rem;
-}
 
 .services{
 	background: var(--second-bg-color);
+}
+.about-text{
+	margin: 2rem 0;
+}
+.about-text h2{
+	margin: 20px 0;
+}
+.about-text p {
+	line-height: 2rem;
+}
+.about-text a{
+	margin: 15px 0;
 }
 .main-text{
 	text-align: center;
@@ -221,19 +204,22 @@ header.sticky{
 	font-size: var(--h2-font);
 	line-height: 1;
 }
-.services-content{
+.achivement-content{
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+	grid-template-columns: repeat(auto-fit, minmax(240px, auto));
 	align-items: center;
+	padding: auto;
+	text-align: center;
 	gap: 2.5rem;
-	margin-top: 5rem;
+	margin-top: 3rem;
 }
 .box{
 	background: var(--bg-color);
-	min-height: 350px;
+	min-height: 330px;
 	padding: 35px 45px;
 	border-radius: 8px;
 	transition: all .45s ease;
+	border: 2px solid gray;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -241,6 +227,9 @@ header.sticky{
 .s-icons i{
 	font-size: 32px;
 	margin-bottom: 20px;
+}
+.s-icon img{
+	width: 48px;
 }
 .box h3{
 	font-size: 24px;
@@ -346,13 +335,18 @@ header.sticky{
 .contact{
 	background: var(--second-bg-color);
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(2, 0.7fr);
 	align-items: center;
-	gap: 2.5rem;
+	justify-content: center;
+}
+.contact-text{
+	display: flex;
+	flex-direction: column;
+	align-items: center	;
 }
 .contact-text h4{
 	color: var(--text-color);
-	margin: 18px 0;
+	
 	font-size: 20px;
 	font-weight: 600;
 }
@@ -382,7 +376,7 @@ header.sticky{
 	color: var(--text-color);
 	transform: translateX(5px);
 }
-.contact-icons i{
+.contact-icons i {
 	height: 45px;
 	width: 45px;
 	background: var(--main-color);
@@ -395,10 +389,11 @@ header.sticky{
 	margin-right: 15px;
 	transition: all .45s ease;
 }
-.contact-icons i:hover{
+.contact-icons i:hover {
 	background: var(--text-color);
 	color: var(--main-color);
 }
+
 
 .contact-form form{
 	position: relative;
@@ -445,6 +440,11 @@ form textarea{
 	color: var(--second-color);
 	font-size: 14px;
 }
+.top{
+	display: flex;
+	gap: 1rem;
+	align-items: center;
+}
 .top i{
 	padding: 10px;
 	border-radius: 8px;
@@ -489,11 +489,15 @@ form textarea{
 @media (max-width: 920px){
 	.about{
 		grid-template-columns: 1fr;
+		
 	}
 	.about-img{
 		text-align: center;
 		order: 2;
 		
+	}
+	.head{
+		text-align: center;
 	}
 	.about-img img{
 		width: 100%;
